--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "rollup-plugin-node-resolve",
-  "description": "Bundle third-party dependencies in node_modules",
-  "version": "2.0.0",
+  "name": "@oasisdigital/rollup-plugin-node-resolve",
+  "private": false,
+  "description": "Bundle third-party dependencies in node_modules. Fork to add es2015-in-es2015 support.",
+  "version": "2.0.1",
   "devDependencies": {
     "buble": "^0.15.2",
     "es5-ext": "^0.10.12",
