--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@oasisdigital/rollup-plugin-node-resolve",
+  "name": "rollup-plugin-node-resolve-angular",
   "private": false,
-  "description": "Bundle third-party dependencies in node_modules. Fork to add es2015-in-es2015 support.",
-  "version": "2.0.2",
+  "description": "Bundle third-party dependencies in node_modules. Adds es2015-in-es2015 support, for example to use with Angular 4+.",
+  "version": "2.0.3",
   "devDependencies": {
     "buble": "^0.15.2",
     "es5-ext": "^0.10.12",
@@ -33,7 +33,7 @@
     "builtin-modules": "^1.1.1",
     "resolve": "^1.3.2"
   },
-  "repository": "rollup/rollup-plugin-node-resolve",
+  "repository": "oasisdigital/rollup-plugin-node-resolve-angular",
   "keywords": [
     "rollup",
     "rollup-plugin",
@@ -41,10 +41,10 @@
     "npm",
     "modules"
   ],
-  "author": "Rich Harris <richard.a.harris@gmail.com>",
+  "author": "Kyle Cordes <kyle.cordes@oasisdigital.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/rollup/rollup-plugin-node-resolve/issues"
+    "url": "https://github.com/OasisDigital/rollup-plugin-node-resolve-angular/issues"
   },
-  "homepage": "https://github.com/rollup/rollup-plugin-node-resolve#readme"
+  "homepage": "https://github.com/OasisDigital/rollup-plugin-node-resolve-angular"
 }
